# TestXmlParser

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build_linux.yml  build_windows.yml  ccpp.yml
ParsingXml/: CMakeLists.txt  ParsingXml.cpp  ParsingXml.h
ParsingXml/TestPocoXml/: CMakeLists.txt  TestPocoXml.cpp  TestPocoXml.h
ParsingXml/TestPugiXml/: CMakeLists.txt  TestPugiXml.cpp  TestPugiXml.h
ParsingXml/TestTinyXml2/: CMakeLists.txt  TestTinyXML2.cpp  TestTinyXML2.h
ParsingXml/TestXerces/: CMakeLists.txt  TestXerces.cpp  TestXerces.h
ParsingXml/XercesSingleton/: CMakeLists.txt  Entry.cpp  Entry.h  entry.cpp
TestTinyXML2/: CMakeLists.txt  TestTinyXML2.cpp  TestTinyXML2.h
lib/: CMakeLists.txt
lib/poco-poco-1.9.4/: CMakeLists.txt
lib/poco-poco-1.9.4/XML/: CMakeLists.txt
lib/poco-poco-1.9.4/Zip/: CMakeLists.txt
lib/tinyxml2/: CMakeLists.txt
lib/xerces-c-3.2.2/: CMakeLists.txt
others/: CMakeLists.txt
others/XmlStorage/: 00SetText.xml  00saveTest_1.xml  0xmlNamespace_test_9660.xml  0xmlNamespace_test_9660_ascii.xml  0xmlNamespace_test_9660_iso8etc.xml  0xmlNamespace_test_9660_utf16be.xml  0xmlNamespace_test_9660_utf16le.xml  0xmlNamespace_test_9660_utf8.xml  GetXmlElementsByXPath.xml  GetXmlElementsByXPath1.xml  InvalidXmlFile.xml  SavedData.xml  SavedData_xerces.xml  SavedData_xerces_DOMPRINT.xml  SavedData_xerces_NonDocument.xml  SavedData_xerces_utf16le.xml  SavedData_xmlTest_Poco_utf16be.xml  SavedData_xmlTest_Poco_utf16le.xml  SavedData_xmlTest_Tiny.xml  SetXmlProcessingInstructions.xml  SmallXmlFile.xml  ValidateXml_TC01.xml  XmlFileWithNotExistingXsd.xml  XmlFromByteField_TC02.xml  XmlFromByteField_TC03.xml  XmlLoadFromFile.xml  XmlLoadFromFile_TC01.xml  XmlLoadFromFile_TC02.xml  XmlSaveToFile_TC01.xml  XmlSaveToFile_TC02.xml  XmlToByteField.xml  cdata_test.xml  multipleRootElement.xml  notwellformed.xml  otxData_ResultDataModel.xsd  tryDeletePInstruction.xml
